kubernetes/components/dragonfly/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ${APP}-dragonfly-allow-metrics
spec:
  podSelector:
    matchLabels:
      app: ${APP}-dragonfly
      app.kubernetes.io/name: dragonfly
      app.kubernetes.io/part-of: dragonfly
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 9999
          protocol: TCP
    # Selecting these pods denies all other ingress, so the app and the operator need explicit access
    - from:
        - podSelector: {}
      ports:
        - port: 6379
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: database
          podSelector:
            matchLabels:
              app.kubernetes.io/name: dragonfly-operator
      ports:
        - port: 6379
          protocol: TCP
        - port: 9999
          protocol: TCP
